--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,12 +32,6 @@
       "@shared/*": ["./shared/*"]
     }
   },
-  "include": [
-    "client/**/*",
-    "server/**/*",
-    "shared/**/*",
-    "vite.config.ts",
-    "vite.config.server.ts"
-  ],
+  "include": ["client/**/*", "server/**/*", "shared/**/*", "vite.config.ts"],
   "exclude": ["node_modules", "dist"]
 }
