--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
+    "googleapis": "^155.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
